ADD: Postgresql v13 support

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "Host=localhost; Port=5432; Database=movies; Username=root; Password=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
