ADD: Mongodb v6.0.5 support

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "MongoDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "movies",
+    "CollectionName": "movies"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
